--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: "com.android.application"
-
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 25
@@ -12,6 +12,12 @@ android {
         versionCode 1
         versionName "1.0"
 
+    }
+
+    greendao {
+        schemaVersion 1
+        daoPackage 'com.simplenote'
+        targetGenDir 'src/main/java/database'
     }
 
     signingConfigs {
@@ -69,6 +75,9 @@ dependencies {
     compile 'com.alibaba:fastjson:1.2.23'
     compile 'com.facebook.fresco:fresco:0.12.0'
     compile 'com.jakewharton:butterknife:8.7.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.7'
+    compile 'org.greenrobot:greendao:3.2.2'
     compile 'com.umeng.analytics:analytics:latest.integration'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
 
