--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,11 +14,11 @@ android {
 
     }
 
-    greendao {
-        schemaVersion 1
-        daoPackage 'com.simplenote'
-        targetGenDir 'src/main/java/database'
-    }
+//    greendao {
+//        schemaVersion 1
+//        daoPackage 'com.simplenote'
+//        targetGenDir 'src/main/java/database'
+//    }
 
     signingConfigs {
         myConfig {
@@ -75,8 +75,8 @@ dependencies {
     compile 'com.alibaba:fastjson:1.2.23'
     compile 'com.facebook.fresco:fresco:0.12.0'
     compile 'com.jakewharton:butterknife:8.7.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.7'
+    compile 'io.reactivex:rxjava:1.2.9'
+    compile 'io.reactivex:rxandroid:1.2.1'
     compile 'org.greenrobot:greendao:3.2.2'
     compile 'com.umeng.analytics:analytics:latest.integration'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
