--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion "25.0.0"
 
     defaultConfig {
         applicationId "com.simplenote"
@@ -79,6 +79,7 @@ dependencies {
     compile 'org.greenrobot:greendao:3.2.2'
     compile 'com.umeng.analytics:analytics:latest.integration'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
 
 }
 
